--- a/model/build_model_1.ipynb
+++ b/model/build_model_1.ipynb
@@ -8,17 +8,26 @@
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import math\n",
     "\n",
-    "tf.enable_eager_execution()\n",
-    "\n",
+    "tf.enable_eager_execution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# update batch size\n",
-    "batch_size = 20\n",
+    "batch_size = 100\n",
     "\n",
     "# number of batch in training\n",
-    "num_of_batch = 10\n",
+    "num_of_batch = 1000\n",
     "\n",
     "# fixed number of time steps in one episode (not used)\n",
-    "trading_period = 60\n",
+    "trading_period = 500\n",
     "\n",
     "# 1 is zscore\n",
     "num_features = 1\n",
@@ -27,41 +36,57 @@
     "a_num = position_num = 3\n",
     "\n",
     "# RNN hidden state dimension\n",
-    "h_dim = 70\n",
+    "h_dim = 100\n",
     "\n",
     "# number of RNN layer\n",
     "num_layers = 1\n",
     "\n",
     "# number of layer1 output\n",
-    "layer1_out_num = 100\n",
+    "layer1_out_num = 50\n",
     "\n",
     "# learning rate\n",
     "lr = 1e-3\n",
     "\n",
     "# discount factor in reinforcement learning\n",
-    "gamma = 1"
+    "gamma = 1\n",
+    "\n",
+    "# random action probability\n",
+    "rand_action_prob = 0.15\n",
+    "\n",
+    "batch_per_print = 50"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# functions\n",
-    "def get_random_history(history):\n",
+    "def get_random_history(batch_size):\n",
     "    \"\"\"Sample some pairs and get the history of those pairs. The history should have\n",
     "    three dimension. The first dimension is for time. The second dimension is indexed\n",
     "    by features name. The third dimension is the index of training instance.\n",
     "    \"\"\"\n",
-    "    pass\n",
+    "    df = pd.read_csv(\"/home/u21376/fyp/dataset/GOOGL-GOOG-1.csv\")\n",
+    "    history = df[['close1', 'close2', 'spread']].values\n",
+    "    arr = []\n",
+    "    for i in range(batch_size):\n",
+    "        temp = history[i*trading_period:(i+1)*trading_period]\n",
+    "        arr.append(history[i*trading_period:(i+1)*trading_period])\n",
+    "    hist = np.array(arr)\n",
+    "    return np.transpose(hist, (1, 2, 0))\n",
+    "    \n",
     "\n",
     "def compute_input_history(history):\n",
     "    \"\"\"Slicing history in its second dimension.\"\"\"\n",
-    "    pass\n",
+    "    return history[:,2:,:]\n",
     "\n",
-    "def sample_action(logits):\n",
-    "    dist = tf.distributions.Categorical(logits=logits)\n",
+    "def sample_action(logits, random=False):\n",
+    "    if random:\n",
+    "        dist = tf.distributions.Categorical(logits=tf.zeros([batch_size, a_num]))\n",
+    "    else:\n",
+    "        dist = tf.distributions.Categorical(logits=logits)\n",
     "    \n",
     "    # 1-D Tensor where the i-th element correspond to a sample from\n",
     "    # the i-th categorical distribution\n",
@@ -105,6 +130,18 @@
     "                                      activation=tf.keras.layers.LeakyReLU(),\n",
     "                                      kernel_initializer=tf.contrib.layers.xavier_initializer()\n",
     "                                     )\n",
+    "        self.dense2 = tf.layers.Dense(units=layer1_out_num,\n",
+    "                                      activation=tf.keras.layers.LeakyReLU(),\n",
+    "                                      kernel_initializer=tf.contrib.layers.xavier_initializer()\n",
+    "                                     )\n",
+    "        self.dense3 = tf.layers.Dense(units=layer1_out_num,\n",
+    "                                      activation=tf.keras.layers.LeakyReLU(),\n",
+    "                                      kernel_initializer=tf.contrib.layers.xavier_initializer()\n",
+    "                                     )\n",
+    "        self.dense4 = tf.layers.Dense(units=layer1_out_num,\n",
+    "                                      activation=tf.keras.layers.LeakyReLU(),\n",
+    "                                      kernel_initializer=tf.contrib.layers.xavier_initializer()\n",
+    "                                     )\n",
     "        self.logits = tf.layers.Dense(units=a_num,\n",
     "                                      activation=tf.keras.layers.LeakyReLU(),\n",
     "                                      kernel_initializer=tf.contrib.layers.xavier_initializer()\n",
@@ -112,8 +149,11 @@
     "\n",
     "    def call(self, inputs):\n",
     "        # Forward pass\n",
-    "        x = self.dense1(inputs)\n",
-    "        logits = self.logits(x)\n",
+    "        inputs = self.dense1(inputs)\n",
+    "        inputs = self.dense2(inputs)\n",
+    "        inputs = self.dense3(inputs)\n",
+    "        inputs = self.dense4(inputs)\n",
+    "        logits = self.logits(inputs)\n",
     "        return logits\n",
     "\n",
     "\n",
@@ -149,7 +189,7 @@
     "        self.state_encoding_model.reset_state()\n",
     "\n",
     "        # 0 is no position. 1 is long the spread. 2 is short the spread\n",
-    "        self.position = np.zeros(batch_size)\n",
+    "        self.position = np.zeros(batch_size, dtype=int)\n",
     "\n",
     "        # prepare a batch of history and input_history\n",
     "        self.history = get_random_history(batch_size)\n",
@@ -175,20 +215,24 @@
     "        \n",
     "        # compute for each training instance in a batch\n",
     "        for i, a in enumerate(action):\n",
-    "            y_p = cur_his[\"y_close\"][i]\n",
-    "            x_p = cur_his[\"x_close\"][i]\n",
-    "            nex_y_p = nex_his[\"y_close\"][i]\n",
-    "            nex_x_p = nex_his[\"x_close\"][i]\n",
+    "#             y_p = cur_his[\"y_close\"][i]\n",
+    "#             x_p = cur_his[\"x_close\"][i]\n",
+    "#             nex_y_p = nex_his[\"y_close\"][i]\n",
+    "#             nex_x_p = nex_his[\"x_close\"][i]\n",
+    "            \n",
+    "            y_p = cur_his[0][i]\n",
+    "            x_p = cur_his[1][i]\n",
+    "            nex_y_p = nex_his[0][i]\n",
+    "            nex_x_p = nex_his[1][i]\n",
     "            if a == 1:\n",
     "                r[i] = math.log(nex_y_p/y_p) + math.log(x_p/nex_x_p)\n",
     "            elif a == 2:\n",
     "                r[i] = math.log(nex_x_p/x_p) + math.log(y_p/nex_y_p)\n",
     "        return r\n",
-    "                \n",
     "    \n",
     "    def update_state(self):\n",
     "        # concate next_input_history and next position to form next partial state\n",
-    "        partial_state = tf.concat([self.input_history[self.t], tf.one_hot(self.position, position_num)], 1)\n",
+    "        partial_state = tf.concat([self.input_history[self.t].T, tf.one_hot(self.position, position_num)], 1)\n",
     "        \n",
     "        # update state\n",
     "        self.state = self.state_encoding_model(partial_state)        \n",
@@ -217,34 +261,38 @@
     "        self.position = action\n",
     "        self.update_state()\n",
     "\n",
-    "        return r, self.state, self.t == batch_size\n",
-    "    "
+    "        return r, self.state, self.t == batch_size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:<tensorflow.python.ops.rnn_cell_impl.LSTMCell object at 0x7f17d5847898>: Note that this cell is not optimized for performance. Please use tf.contrib.cudnn_rnn.CudnnLSTM for better performance on GPU.\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-2a462c781280>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mpi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTradingPolicyModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mstate_encoding_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mStateEncodingModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0menv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTradingEnvironment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_encoding_model\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAdamOptimizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mall_variables\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstate_encode_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvariables\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mpi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvariables\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-12-d3bd1388c0a4>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, state_encoding_model)\u001b[0m\n\u001b[1;32m     93\u001b[0m         \u001b[0;31m# do some initialization\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_encoding_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstate_encoding_model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 95\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reset_env\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     96\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_reset_env\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-12-d3bd1388c0a4>\u001b[0m in \u001b[0;36m_reset_env\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    107\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    108\u001b[0m         \u001b[0;31m# create or update self.state variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 109\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    110\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    111\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mreset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-12-d3bd1388c0a4>\u001b[0m in \u001b[0;36mupdate_state\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    139\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mupdate_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    140\u001b[0m         \u001b[0;31m# concate next_input_history and next position to form next partial state\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 141\u001b[0;31m         \u001b[0mpartial_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minput_history\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mone_hot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mposition\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mposition_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    142\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    143\u001b[0m         \u001b[0;31m# update state\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+      "batch: 49, average_total_r_per_ep: 1.6464054135444144e-05\n",
+      "batch: 99, average_total_r_per_ep: -2.2561814368062148e-05\n",
+      "batch: 149, average_total_r_per_ep: -1.3817527085588554e-05\n",
+      "batch: 199, average_total_r_per_ep: 5.936656222624392e-05\n",
+      "batch: 249, average_total_r_per_ep: 2.0207143590096053e-05\n",
+      "batch: 299, average_total_r_per_ep: 2.5382190553506685e-05\n",
+      "batch: 349, average_total_r_per_ep: 5.874221155951589e-05\n",
+      "batch: 399, average_total_r_per_ep: 3.5309044906404675e-05\n",
+      "batch: 449, average_total_r_per_ep: 7.370314040504169e-05\n",
+      "batch: 499, average_total_r_per_ep: 7.194255206300513e-05\n",
+      "batch: 549, average_total_r_per_ep: 3.744918510306042e-05\n",
+      "batch: 599, average_total_r_per_ep: 2.2135442501452317e-05\n",
+      "batch: 649, average_total_r_per_ep: 4.44327209753318e-05\n",
+      "batch: 699, average_total_r_per_ep: 5.214230257825284e-05\n",
+      "batch: 749, average_total_r_per_ep: 1.8597701248665535e-05\n",
+      "batch: 799, average_total_r_per_ep: 4.5274625407673044e-05\n",
+      "batch: 849, average_total_r_per_ep: 3.1649892616269556e-05\n",
+      "batch: 899, average_total_r_per_ep: 2.2087040420632587e-05\n",
+      "batch: 949, average_total_r_per_ep: 2.69514208243513e-05\n",
+      "batch: 999, average_total_r_per_ep: 3.282878433785706e-05\n"
      ]
     }
    ],
@@ -253,11 +301,11 @@
     "state_encoding_model = StateEncodingModel()\n",
     "env = TradingEnvironment(state_encoding_model)\n",
     "optimizer = tf.train.AdamOptimizer(learning_rate=lr)\n",
-    "all_variables = state_encode_model.variables + pi.variables\n",
+    "\n",
+    "# for training reference only\n",
+    "average_total_r = np.zeros(batch_size)\n",
     "\n",
     "for batch in range(num_of_batch):\n",
-    "    # for training reference only\n",
-    "    average_total_r = np.zeros(batch_size)\n",
     "    \n",
     "    # saving for update\n",
     "    all_logits = []\n",
@@ -269,9 +317,9 @@
     "\n",
     "        # internally the episode length is fixed by trading_period\n",
     "        while not done:\n",
-    "            logits = pi(0)\n",
-    "            a = sample_action(logits)\n",
-    "            r, next_s, done = senv.step(a.numpy())\n",
+    "            logits = pi(s)\n",
+    "            a = sample_action(logits, random=np.random.rand() <= rand_action_prob)\n",
+    "            r, next_s, done = env.step(a.numpy())\n",
     "\n",
     "            # save the episode\n",
     "            all_logits.append(logits)\n",
@@ -280,21 +328,59 @@
     "            \n",
     "            average_total_r += r\n",
     "        \n",
-    "        all_actions = tf.stack(all_actions)\n",
-    "        all_logits = tf.stack(all_logits)\n",
-    "        all_rewards = np.array(all_rewards)\n",
+    "        all_logits_stack = tf.stack(all_logits)\n",
+    "        all_actions_stack = tf.stack(all_actions)\n",
+    "        all_rewards_stack = np.array(all_rewards)\n",
     "        \n",
     "        # compute cummulative rewards for each action\n",
-    "        all_cum_rewards = discount_rewards(all_rewards, all_actions.numpy())\n",
+    "        all_cum_rewards = discount_rewards(all_rewards_stack, all_actions_stack.numpy())\n",
     "        all_cum_rewards -= np.mean(all_cum_rewards)\n",
     "        all_cum_rewards /= np.std(all_cum_rewards)\n",
-    "        \n",
-    "        loss_value = loss(all_logits, all_actions, all_cum_rewards)\n",
+    "        all_cum_rewards = tf.convert_to_tensor(all_cum_rewards, dtype=tf.float32)\n",
+    "\n",
+    "        loss_value = loss(all_logits_stack, all_actions_stack, all_cum_rewards)\n",
     "    \n",
-    "    print(\"batch: {}, average_total_r: {}\".format(batch, np.mean(average_total_r)))\n",
+    "    if (batch+1) % batch_per_print == 0:\n",
+    "        print(\"batch: {}, average_total_r_per_ep: {}\".format(batch, np.mean(average_total_r)/batch_per_print))\n",
+    "        average_total_r = np.zeros(batch_size)\n",
     "    \n",
-    "    grads = tape.gradient(loss_value, all_variables)\n",
-    "    optimizer.apply_gradients(zip(grads, all_variables))"
+    "    grads = gt.gradient(loss_value, state_encoding_model.variables + pi.variables)\n",
+    "    optimizer.apply_gradients(zip(grads, state_encoding_model.variables + pi.variables))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At test time, average_total_r_per_ep: 4.2436951307533045e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test time\n",
+    "average_total_r = np.zeros(batch_size)\n",
+    "done = False\n",
+    "s = env.reset()\n",
+    "\n",
+    "# internally the episode length is fixed by trading_period\n",
+    "while not done:\n",
+    "    logits = pi(s)\n",
+    "    a = sample_action(logits)\n",
+    "    r, next_s, done = env.step(a.numpy())\n",
+    "\n",
+    "    # save the episode\n",
+    "    all_logits.append(logits)\n",
+    "    all_actions.append(a)\n",
+    "    all_rewards.append(r)\n",
+    "\n",
+    "    average_total_r += r\n",
+    "\n",
+    "print(\"At test time, average_total_r_per_ep: {}\".format(np.mean(average_total_r)))"
    ]
   },
   {
@@ -307,9 +393,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (Intel, 2018 update 2)",
    "language": "python",
-   "name": "python3"
+   "name": "c009-intel_distribution_of_python_3_2018u2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -321,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
