added skeleton for backtest-multiple-pairs

--- a/jupyter-py/3b-Load-IB-Data-Blocks.ipynb
+++ b/jupyter-py/3b-Load-IB-Data-Blocks.ipynb
@@ -170,19 +170,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading data of NASDAQ: MNGA\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Peer closed connection\n"
+      "Downloading data of NASDAQ: MAMS\n",
+      "230/437 completed.\n",
+      "Downloading data of NASDAQ: MANH\n",
+      "231/437 completed.\n",
+      "Downloading data of NASDAQ: MNTX\n",
+      "232/437 completed.\n",
+      "Downloading data of NASDAQ: MRIN\n",
+      "233/437 completed.\n",
+      "Downloading data of NASDAQ: MRVL\n",
+      "234/437 completed.\n",
+      "Downloading data of NASDAQ: MTCH\n",
+      "235/437 completed.\n",
+      "Downloading data of NASDAQ: MTLS\n",
+      "236/437 completed.\n",
+      "Downloading data of NASDAQ: MXIM\n"
      ]
     }
    ],
    "source": [
-    "for i in range(228, len(nasdaq_tech_names)):\n",
+    "for i in range(229, len(nasdaq_tech_names)):\n",
     "    stock_name = nasdaq_tech_names[i]\n",
     "    \n",
     "    print(\"Downloading data of NASDAQ: \" + stock_name)\n",
@@ -205,7 +212,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "contract = Stock('VXX', 'SMART', 'USD', primaryExchange=\"NYSE\")\n",
